fixing alignment of create software steps

--- a/src/noosfero-spb/noosfero-spb-theme/css/software-pages.css
+++ b/src/noosfero-spb/noosfero-spb-theme/css/software-pages.css
@@ -865,6 +865,8 @@
 
 .software-step-info ul li:last-child{
   border: none;
+  margin: 0;
+  padding: 0;
 }
 
 .software-step-info ul li .current-step{
